[package]
name = "s-kademlia"
version = "0.1.0"
authors = ["bddb"]
edition = "2018"
description = "s/kademlia in rust"
categories = ["dht", "kademlia"]
readme = "README.md"

[dependencies]
bytes = "0.4.12"
rand = "0.7.2"
zeroize = "1.0.0"
disco = { path = "../disco" } # amar-review branch
crossbeam-utils = "0.6.6"

[dependencies.ed25519-dalek]
git = "https://github.com/dvc94ch/ed25519-dalek"
branch = "update-rand"

[dev-dependencies]
criterion = "0.3.0"
# quickcheck = "0.9.0"
# model = "0.1"

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "store"
harness = false

[features]
default = ["std"]
std = []

[profile.bench]
debug = true
