[package]
name = "s-kademlia"
version = "0.1.0"
authors = ["bddb"]
edition = "2018"
description = "s/kademlia in rust"
categories = ["dht", "kademlia"]
readme = "README.md"

[dependencies]
bytes = "0.4.12"
byteorder = "1.3.2"
async-std = "0.99.12"
async-trait = "0.1.17"
bs58 = "0.3.0"
rand = "0.7.2"
time = "0.1.42"
zeroize = "1.0.0"
uint = "0.8"
disco = { path = "../disco" }
failure_derive = "0.1.6"
failure = "0.1.6"

[dependencies.ed25519-dalek]
git = "https://github.com/dvc94ch/ed25519-dalek"
branch = "update-rand"

[dev-dependencies]
criterion = "0.3.0"
quickcheck = "0.9.0"
model = "0.1"

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "store"
harness = false

[features]
default = ["std"]
std = []

[profile.bench]
debug = true
