[package]
name = "s-kademlia"
version = "0.1.0"
authors = ["bddb"]
edition = "2018"
description = "s/kademlia in rust"
categories = ["dht", "kademlia"]
readme = "README.md"

[dependencies]
bs58 = "0.3.0"
rand = "0.7.2"
time = "0.1.42"
uint = "0.8"
disco = { path = "../../disco" }
failure = "0.1.6"
arrayvec = "0.5.1"

[dependencies.ed25519-dalek]
git = "https://github.com/dvc94ch/ed25519-dalek"
branch = "update-rand"

[dev-dependencies]
criterion = "0.3.0"
quickcheck = "0.9.0"
model = "0.1"

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "store"
harness = false

[profile.bench]
debug = true
